zeit.cms changes
================

1.41.5 (unreleased)
-------------------

- Copyrights-field from CommonMetadata is now optional

- Copyrights moved to "navigation" in metadata form.

- ``product_id`` moved to "head" in metadata form.

- DAV-Properties from the "INTERNAL" namespace are no longer copied to XML
  (#7151).


1.41.4 (2010-04-14)
-------------------

- Provide useful error message in the ``redirect_to`` view when the object
  doesn't exist (#6998).

- When trying to view the thumbnail of an empty image group a 404 is returned
  instead of 500 (#6998).

1.41.3 (2010-04-14)
-------------------

- Prefer ``log.error(..., exc_info=True)`` over ``log.exception(...)``.


1.41.2 (2010-04-09)
-------------------

- Using ICMSContet adapter instead of direct repository access in most places
  to support multiple repositories (i.e. videos).


1.41.1 (2010-03-31)
-------------------

- PURGE für HTTP-Cache-Server (#6969).

- Using versions from the ZTK.

- Improved test infrastructure.

- "Trotzdem einchecken" honoriert nicht "als korrektur einchecken"  (#6880)


1.41.0 (2010-03-10)
-------------------

- Fix that text fields which are mapped to xml nodes still work even when there
  is no py:pytype and the contents is an integer (#6824).

- Change the way asset interfaces are registered. This fixes isolation problems
  during tests (#6712).

- Checkin-Conflict-Resolver wird mit HTTP-Status 200 ausgeliefert, statt bisher
  500 (#6392).

- Checkin-Conflict-Resolver checkt jetzt auch Korrekturen korrekt ein (#6880).

- Die Felder CAP-Kontext und CAP-Titel auf allen Objekten mit Standardmetadaten
  verfügbar gemacht (#6923).

- Kein ``alert()`` mehr bei Nicht-Firefox-Browsern (#6935).

- Relaunch-Preview-Icon an- und abschaltbar (#6878).

- Syndication-Tab und dezentrale Syndizierung an- und abschaltbar (#6878).

- Alte CenterPage komplett entfernt (#6878).

- Channel sind keine vollwertigen Inhaltstypen mehr, wenn das dezentrale