@@ -2,9 +2,12 @@
 # See also LICENSE.txt
 """Dublincore implementation."""
 
+import datetime
 import grokcore.component
+import pytz
 import zeit.cms.content.dav
 import zeit.cms.repository.interfaces
+import zeit.cms.workingcopy.interfaces
 import zope.dublincore.interfaces
 
 
@@ -22,3 +25,27 @@ class RepositoryDCTimes(zeit.cms.content.dav.DAVPropertiesAdapter):
         zope.dublincore.interfaces.IDCTimes['modified'],
         u'DAV:',
         'getlastmodified')
+
+
+class LocalDCTimes(RepositoryDCTimes):
+
+    grokcore.component.context(zeit.cms.workingcopy.interfaces.ILocalContent)
+
+    @property
+    def modified(self):
+        ts = self.context._p_mtime
+        if ts is None:
+            modified = super(LocalDCTimes, self).modified
+            if modified is None:
+                annotations = zope.annotation.interfaces.IAnnotations(self.context)
+                modified = annotations.get(__name__)
+        else:
+            modified = datetime.datetime.fromtimestamp(ts, pytz.UTC)
+        return modified
+
+    @modified.setter
+    def modified(self, value):
+        # Store modified in annotations. Some code may set modified for temporary
+        # objects or to have a modified date before database commit.
+        annotations = zope.annotation.interfaces.IAnnotations(self.context)
+        annotations[__name__] = value
